[package]
name = "arcaxh_translator"
version = "0.1.0"
edition = "2021"

[lib]
name = "arcaxh_translator"
crate-type = ["cdylib"]

[dependencies]
regex = "1.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
